[package]
name = "blockdag"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
sha2 = "0.9"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "1.0"

rand_core = "0.6.0" # Ensure this version or higher
rand_chacha = "0.3"